--- a/css/browser.css
+++ b/css/browser.css
@@ -25,6 +25,10 @@
     background-color: #b6b6b6 !important;
 }
 
+#page-status.bg-white:hover {
+    background-color: #c3c9d8 !important;
+}
+
 
 /* Dark Theme */
 
