--- a/css/browser.css
+++ b/css/browser.css
@@ -29,6 +29,10 @@
     background-color: #c3c9d8 !important;
 }
 
+#page-status.bg-white:active {
+    background-color: #cfd4e2 !important
+}
+
 
 /* Dark Theme */
 
@@ -52,4 +56,8 @@
 
 #page-status.bg-dark:hover {
     background-color: #2F3037 !important
+}
+
+#page-status.bg-dark:active {
+    background-color: #505257 !important
 }
